Update pipeline DCL

--- a/.harness/orgs/default/projects/VN/pipelines/DCL.yaml
+++ b/.harness/orgs/default/projects/VN/pipelines/DCL.yaml
@@ -41,4 +41,5 @@ pipeline:
                     repo: vikramtek/harness-cache-demo
                     tags:
                       - Demo
+                    dockerfile: Dockerfile
                     caching: true
