Update Docker tag from 'Demo' to 'Demo2'

--- a/.harness/orgs/default/projects/VN/pipelines/DCL.yaml
+++ b/.harness/orgs/default/projects/VN/pipelines/DCL.yaml
@@ -40,6 +40,6 @@ pipeline:
                     connectorRef: Vikram_Docker
                     repo: vikramtek/harness-cache-demo
                     tags:
-                      - Demo
+                      - Demo2
                     dockerfile: Dockerfile
                     caching: true
